--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
             <artifactId>flatlaf</artifactId>
             <version>3.2</version>
           </dependency>
+          
+          <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
